--- a/css/css.css
+++ b/css/css.css
@@ -8,7 +8,8 @@
 
 .img-goods {
     width: 80%;
-    height: 0.55rem;
+    height: 0.84rem;
+    display: block;
 }
 
 .goods-price {
@@ -17,4 +18,5 @@
     line-height: 0.33rem;
     text-align: center;
     width:100%;
+    margin-bottom: 1.5rem;
 }
